# UGC-Sniper

./: config.json  cookies.txt  limiteds.txt  pyproject.toml
logs/: logs 2023-07-04 0227.txt  logs 2023-07-04 0231.txt  logs 2023-07-04 1858.txt  logs 2023-07-04 1859.txt  logs 2023-07-04 1901.txt  logs 2023-07-04 1928.txt  logs 2023-07-04 1929.txt  logs 2023-07-04 1931.txt  logs 2023-07-04 1959.txt  logs 2023-07-04 2001.txt  logs 2023-07-04 2002.txt  logs 2023-07-04 2003.txt  logs 2023-07-04 2004.txt  logs 2023-07-04 2005.txt  logs 2023-07-04 2008.txt  logs 2023-07-04 2009.txt  logs 2023-07-04 2012.txt  logs 2023-07-04 2015.txt  logs 2023-07-04 2016.txt
