[tool.poetry]
name = "repl_nix_UGC-Sniper"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
quart = "^0.18.4"
rgbprint = "^4.0.2"
aiohttp = "^3.8.4"
discord = "^2.3.1"
pick = "^2.2.0"
python-rapidjson = "^1.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
